--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^4.6.0",
     "clsx": "^1.1.1",
     "cra-template": "1.1.2",
+    "crypto-js": "^4.0.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.0",
