--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "recharts": "^2.0.9",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
