--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "react-admin-template",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:2973/",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^28.0.0",
     "@ckeditor/ckeditor5-build-decoupled-document": "^28.0.0",
