--- a/server/package.json
+++ b/server/package.json
@@ -20,10 +20,12 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-useragent": "^1.0.15",
+    "googleapis": "^78.0.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.2",
     "nodemon": "^2.0.7",
     "otp-generator": "^2.0.1",
     "validator": "^13.6.0"
