--- a/server/package.json
+++ b/server/package.json
@@ -22,12 +22,15 @@
     "express-useragent": "^1.0.15",
     "googleapis": "^78.0.0",
     "joi": "^17.4.0",
+    "js-sha512": "^0.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.2",
     "nodemon": "^2.0.7",
     "otp-generator": "^2.0.1",
+    "sha1": "^1.1.1",
+    "sha256": "^0.2.0",
     "validator": "^13.6.0"
   }
 }
