--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.6.2",
     "nodemon": "^2.0.7",
     "otp-generator": "^2.0.1",
+    "public-ip": "^4.0.4",
     "sha1": "^1.1.1",
     "sha256": "^0.2.0",
     "validator": "^13.6.0"
