--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "react-admin-template",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:2973/",
+  "proxy": "http://localhost:2973/",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^28.0.0",
     "@ckeditor/ckeditor5-build-decoupled-document": "^28.0.0",
@@ -33,6 +33,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-file-base64": "^1.0.3",
+    "react-iframe": "^1.8.0",
     "react-overlays": "^5.0.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
