--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-admin-template",
+  "name": "notesapp",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:2973/",
